@@ -1,3 +1,13 @@
+2008-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* eword-decode.el (eword-decode-string, eword-decode-region)
+	(eword-analyze-encoded-word): Express the language portion of an
+	encoded word as a symbol.
+
+	* tests/test-rfc2231.el (test-rfc2231-encoded-word-1)
+	(test-rfc2231-encoded-word-2, test-rfc2231-encoded-word-3): Use
+	eword-decode-string instead of eword-decode-encoded-word.
+
 2008-09-20  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* mel-q-ccl.el (mel-ccl-256-to-16-table): Accept (illegal) lower
